[package]
name = "dedup_iter"
version = "0.1.1"
authors = ["aswaving <a.swaving@gmail.com>"]
description = "Deduplicating iterator adapters"
keywords = ["iterator", "iter", "dedup"]
readme = "README.md"
repository = "https://github.com/aswaving/dedup_iter"
documentation = "https://docs.rs/dedup_iter/0.1.1/dedup_iter"
license = "MIT"

[dependencies]
